--- a/8.ukol_2/pom.xml
+++ b/8.ukol_2/pom.xml
@@ -40,6 +40,11 @@
       <artifactId>axis-jaxrpc</artifactId>
       <version>1.4</version>
     </dependency>
+    <dependency>
+      <groupId>commons-discovery</groupId>
+      <artifactId>commons-discovery</artifactId>
+      <version>0.5</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>mdw-ukol-8-3</finalName>
